--- a/html/index.html
+++ b/html/index.html
@@ -91,6 +91,27 @@
 			</div>
 		</section>
 	</div>
+	<div id="myModal" class="modal">
+		<div class="modal-content">
+			<span class="close">&times;</span>
+			<div style="display: inline-flex; align-items: start; padding-bottom: 1em;">$
+				<img alt="some image" id="modal-img">
+				<div style="padding: 0 1em;">
+					<h1 id="modal-title" style="margin: 0;"></h1>
+					<p id="modal-description"></p>
+					<p>
+						Date de sortie: <span id="modal-date-published"></span></br>
+						Note: <span id="modal-avg-vote"></span></br>
+						Score Imdb: <span id="modal-imdb"></span></br>
+						Durée: <span id="modal-duration"></span> mn</br>
+						Réalisateur: <span id="modal-directors"></span></br>
+						Pays d'origine: <span id="modal-countries"></span></br>
+						Acteurs: <span id="modal-actors"></span></br>
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<script type="text/javascript" src="../js/base.js"></script>
 	<script type="text/javascript" src="../js/carousel.js"></script>
 </body>
