--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,11 +26,11 @@
 	<div id="content">
 		<section id="highlight">
 			<div class="highlight-img">
-				<img id="highlight-img">
+				<img id="highlight-img" src="#" alt="highlight image">
 			</div>
 			<div  class="highlight-content">
 				<div id="highlight-title">
-					<h1 id="highlight-title-text"></h1>
+					<h2 id="highlight-title-text">#</h2>
 				</div>
 				<div id="highlight-description">
 					<p id="highlight-description-text"></p>
@@ -42,7 +42,7 @@
 		</section>
 		<section id="categories">
 			<div id="top-rated" class="category">
-				<h1>Les mieux notés</h1>
+				<h2>Les mieux notés</h2>
 				<div class="carousel">
 					<div class="nav nav-left">
 	        			<i class="fa fa-chevron-left" style="font-size: 2.5em; cursor: pointer;"></i>
@@ -54,7 +54,7 @@
 				</div>
 			</div>
 			<div class="category">
-				<h1 id="catagory-1-title"></h1>
+				<h2 id="catagory-1-title">#</h2>
 				<div class="carousel">
 					<div class="nav nav-left">
 	        			<i class="fa fa-chevron-left" style="font-size: 2.5em; cursor: pointer;"></i>
@@ -66,7 +66,7 @@
 				</div>
 			</div>
 			<div class="category">
-				<h1 id="catagory-2-title"></h1>
+				<h2 id="catagory-2-title">#</h2>
 				<div class="carousel">
 					<div class="nav nav-left">
 	        			<i class="fa fa-chevron-left" style="font-size: 2.5em; cursor: pointer;"></i>
@@ -78,7 +78,7 @@
 				</div>
 			</div>
 			<div class="category">
-				<h1 id="catagory-3-title"></h1>
+				<h2 id="catagory-3-title">#</h2>
 				<div class="carousel">
 					<div class="nav nav-left">
 	        			<i class="fa fa-chevron-left" style="font-size: 2.5em; cursor: pointer;"></i>
@@ -94,25 +94,25 @@
 	<div id="myModal" class="modal">
 		<div class="modal-content">
 			<span class="close">&times;</span>
-			<div style="display: inline-flex; align-items: start; padding-bottom: 1em;">$
-				<img alt="some image" id="modal-img">
+			<div style="display: inline-flex; align-items: start; padding-bottom: 1em;">
+				<img alt="some image" id="modal-img" src="#">
 				<div style="padding: 0 1em;">
-					<h1 id="modal-title" style="margin: 0;"></h1>
+					<h1 id="modal-title" style="margin: 0;">#</h1>
 					<p id="modal-description"></p>
 					<p>
-						Date de sortie: <span id="modal-date-published"></span></br>
-						Note: <span id="modal-avg-vote"></span></br>
-						Score Imdb: <span id="modal-imdb"></span></br>
-						Durée: <span id="modal-duration"></span> mn</br>
-						Réalisateur: <span id="modal-directors"></span></br>
-						Pays d'origine: <span id="modal-countries"></span></br>
-						Acteurs: <span id="modal-actors"></span></br>
+						Date de sortie: <span id="modal-date-published"></span><br>
+						Note: <span id="modal-avg-vote"></span><br>
+						Score Imdb: <span id="modal-imdb"></span><br>
+						Durée: <span id="modal-duration"></span> mn<br>
+						Réalisateur: <span id="modal-directors"></span><br>
+						Pays d'origine: <span id="modal-countries"></span><br>
+						Acteurs: <span id="modal-actors"></span><br>
 					</p>
 				</div>
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="../js/base.js"></script>
-	<script type="text/javascript" src="../js/carousel.js"></script>
+	<script src="../js/base.js"></script>
+	<script src="../js/carousel.js"></script>
 </body>
 </html>
