--- a/html/index.html
+++ b/html/index.html
@@ -113,6 +113,8 @@
 		</div>
 	</div>
 	<script src="../js/base.js"></script>
+	<script src="../js/calls_ajax.js"></script>
 	<script src="../js/carousel.js"></script>
+	<script src="../js/modal.js"></script>
 </body>
 </html>
